--- a/HibernateDBLoggerTests/HibernateDBLoggerTests.csproj
+++ b/HibernateDBLoggerTests/HibernateDBLoggerTests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{DA018316-7AF0-4740-8C81-046F1762CB93}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HybernateDBLoggerTests</RootNamespace>
-    <AssemblyName>HybernateDBLoggerTests</AssemblyName>
+    <RootNamespace>HibernateDBLoggerTests</RootNamespace>
+    <AssemblyName>HibernateDBLoggerTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -62,9 +62,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HybernateDBLogger.csproj">
+    <ProjectReference Include="..\HibernateDBLogger.csproj">
       <Project>{0d2b3543-d469-4365-93a2-0783278ae676}</Project>
-      <Name>HybernateDBLogger</Name>
+      <Name>HibernateDBLogger</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
